Added more custom items, some are still pending textures

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -3899,20 +3899,28 @@ cookingwithtfc {
 
 customitems {
     B:acaciafence=false
+    B:acetone=false
     B:andesite=true
+    B:benzene=false
     B:birchfence=false
+    B:bisphenola=false
+    B:bisphenolafeedstock=false
     B:bluesand=true
     B:carbonplatedblock=true
     B:carbonplatedblockalt=true
     B:chiseleddarkquartz=true
     B:chiseledredsandstone=true
     B:coarsedirt=true
+    B:cumene=false
+    B:cumenehydroperoxide=false
     B:customglass=false
     B:customglassfence=false
     B:customglasspane=false
     B:customglassslab=false
     B:customglassstairs=false
     B:customglasswall=false
+    B:cyclohexanoneoxime=false
+    B:cyclohexylbenzene1hydroperoxide=false
     B:darkoakfence=false
     B:darkprismarine=true
     B:darkquartz=true
@@ -3920,18 +3928,30 @@ customitems {
     B:diorite=true
     B:doublecustomglassslab=false
     B:doubleredsandstoneslab=true
+    B:epichlorohydrin=false
+    B:epoxyresin=false
+    B:ethylene=false
     B:granite=true
     B:greeni=false
     B:greensand=true
+    B:hydrofluoricacid=false
+    B:hydroxylamine=false
+    B:isomericalchoholmixture=false
+    B:isoprene=false
     B:junglefence=false
+    B:mercury=false
+    B:naptha=false
     B:novalava=false
     B:novawater=false
+    B:nylon=false
+    B:phenol=false
     B:pinksand=true
     B:polishedandesite=true
     B:polisheddiorite=true
     B:polishedgranite=true
     B:prismarine=true
     B:prismarinebricks=true
+    B:propene=false
     B:redsand=true
     B:redsandstone=true
     B:redsandstoneslab=false
