--- a/config/DynamicLights.cfg
+++ b/config/DynamicLights.cfg
@@ -66,6 +66,7 @@ adaptors {
     B:EntityFishTFC=true
     B:EntityHorse=true
     B:EntityHovercraft=true
+    B:EntityMiniMe=true
     B:EntityMotorcycle=true
     B:EntityPheasantTFC=true
     B:EntityPickupTruck=true
@@ -82,6 +83,7 @@ adaptors {
     B:EntitySpiderTFC=true
     B:EntitySquid=true
     B:EntitySquidTFC=true
+    B:EntityStand=true
     B:EntityVillager=true
     B:EntityWitch=true
     B:EntityWizard=true
@@ -149,6 +151,7 @@ general {
     I:EntityFishTFC=0
     I:EntityHorse=0
     I:EntityHovercraft=0
+    I:EntityMiniMe=0
     I:EntityMotorcycle=0
     I:EntityPheasantTFC=0
     I:EntityPickupTruck=0
@@ -165,6 +168,7 @@ general {
     I:EntitySpiderTFC=0
     I:EntitySquid=0
     I:EntitySquidTFC=0
+    I:EntityStand=0
     I:EntityVillager=0
     I:EntityWitch=0
     I:EntityWizard=0
