--- a/config/NEI/bookmarks.ini
+++ b/config/NEI/bookmarks.ini
@@ -1,5 +1,1 @@
-{strId:"ImmersiveEngineering:metal",Count:1b,Damage:32s}
-{strId:"ImmersiveEngineering:metal",Count:1b,Damage:33s}
-{strId:"ImmersiveEngineering:metal",Count:1b,Damage:36s}
-{strId:"ImmersiveEngineering:metal",Count:1b,Damage:38s}
-{strId:"ImmersiveEngineering:metal",Count:1b,Damage:30s}
+{strId:"terrafirmacraft:item.Jug",Count:1b,Damage:0s}
