--- a/config/NEI/client.cfg
+++ b/config/NEI/client.cfg
@@ -16,7 +16,7 @@ command
 
 inventory
 {
-	cheatmode=2
+	cheatmode=1
 	gamemodes=creative, creative+, adventure
 	hidden=false
 	itemIDs=1
@@ -28,7 +28,7 @@ inventory
 	oredict=false
 	profileRecipes=false
 	searchmode=1
-	utilities=delete, magnet
+	utilities=delete, magnet, heal, rain, creative, creative+, adventure, time
 	widgetsenabled=true
 }
 
