--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -7,16 +7,27 @@ General {
 
 
 Whitelist {
+    B:acetone=true
     B:aerotheum=true
+    B:benzene=true
     B:bioethanol=true
     B:biomass=true
+    B:bisphenol-a=true
+    B:bisphenol-a_feedstock=true
     B:cloud_seed=true
     B:cloud_seed_concentrated=true
     B:coal=true
     B:creosote=true
     B:cryotheum=true
+    B:cumene=true
+    B:cumene_hydroperoxide=true
+    B:cyclohexanone_oxime=true
+    B:cyclohexylbenzene-1-hydroperoxide=true
     B:diesel=true
     B:ender=true
+    B:epichlorohydrin=true
+    B:epoxy_resin=true
+    B:ethylene=true
     B:fire_water=true
     B:for.honey=true
     B:freshwater=true
@@ -28,8 +39,12 @@ Whitelist {
     B:hootch=true
     B:hotcrude=true
     B:hotwater=true
+    B:hydrofluoric_acid=true
     B:hydrogen=true
+    B:hydroxylamine=true
     B:ice=true
+    B:isomeric_alchohol_mixture=true
+    B:isoprene=true
     B:juice=true
     B:latex=true
     B:lava=true
@@ -148,15 +163,20 @@ Whitelist {
     B:liquidzinc=true
     B:mana=true
     B:mead=true
+    B:mercury=true
     B:mutagen=true
+    B:naptha=true
     B:naturalgas=true
     B:nitrogen=true
     B:nova_lava=true
     B:nova_water=true
     B:nutrient_distillation=true
+    B:nylon=true
     B:oil=true
     B:oxygen=true
     B:petrotheum=true
+    B:phenol=true
+    B:propene=true
     B:protein=true
     B:pyrotheum=true
     B:"rc chlorine"=true
