--- a/config/pharesoint.cfg
+++ b/config/pharesoint.cfg
@@ -7,6 +7,7 @@ general {
     # Delay in ms between payloads to avoid being kicked for spam [range: 0 ~ 2147483647, default: 1000]
     I:"Spam Avoidance Delay"=1000
     S:"Trusted Players" <
+        Herbert_Berdale
      >
 
     # If push/pull commands will use regex or not. [default: false]
